# Meta2Data

./: CLAUDE.MD  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: module2_flow.md  pipeline_overview.md
scripts/: AmpliconFunction.sh  check_dependencies.sh  entropy_primer_detect.py  install_binaries.sh  metadata_downloader.py  py_16s.py  run.sh  taxonomy.sh
