[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Meta2Data"
version = "1.0.0"
description = "Bioinformatics pipeline for automated amplicon sequencing data processing from NCBI databases"
readme = "CLAUDE.MD"
requires-python = ">=3.10"
authors = [
    {name = "Meta2Data Contributors"}
]
# QIIME2 provides pandas/numpy/requests/biom-format via its own conda
# dependency tree, so we only declare biopython here — it is the one Python
# package QIIME2 does not ship, and pip-installing a pure-Python package on
# top of a QIIME2 env is safe (no native-extension version clash).
dependencies = [
    "biopython",
]

[project.optional-dependencies]
# Use `pip install Meta2Data[full]` for standalone installs outside QIIME2
full = [
    "pandas",
    "openpyxl",
    "requests",
    "numpy>=1.26,<2",
    "biom-format",
]

[tool.setuptools]
# This is primarily a command-line tool package
# Files are included via MANIFEST.in
py-modules = []
packages = []
